--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "esbuild sandbox/index.js --bundle --outdir=./demo"
+    "build": "esbuild sandbox/src/index.js --bundle --outdir=./demo && cp -R sandbox/assets demo/"
   },
   "repository": {
     "type": "git",
