--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "esbuild test/render-backend/webgl/index.js --bundle --outdir=./demo"
+    "build": "esbuild test/render-backend/webgl/index.js --bundle --outdir=./public"
   },
   "repository": {
     "type": "git",
